--- a/src/index.html
+++ b/src/index.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Tailwind</title>
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body class="m-0 p-0" style="background-color: #121212;">
-<div class="lg:max-w-3xl ml-auto mr-auto">
+<div class="lg:max-w-3xl ml-auto mr-auto h-screen">
 
-<div class="columns-3 text-center m-2 gap-2 text-neutral-300 text-3xl">
-    <div class="bg-neutral-800 min-h-full">
+<div class="columns-3 text-center m-2 gap-2 text-neutral-300 text-3xl" style="height: 16vh;">
+    <div class="bg-neutral-800">
         <div class="bg-neutral-700 p-3">Player 1</div>
-        <div class="text-8xl p-3 h-40">501</div>
+        <div class="text-8xl p-3">501</div>
     </div>
-    <div class="bg-neutral-800 min-h-full">
+    <div class="bg-neutral-800 h-40">
         <div class="bg-neutral-700 p-3 opacity-75">0-0</div>
-        <div class="text-8xl pt-3 h-40">60</div>
+        <div class="text-8xl pt-3">60</div>
     </div>
-    <div class="bg-neutral-800 min-h-full">
-        <div class="bg-neutral-700 p-3">Player 1</div>
-        <div class="text-8xl p-3 h-40">501</div>
+    <div class="bg-neutral-800">
+        <div class="bg-neutral-700 p-3">Player 2</div>
+        <div class="text-8xl p-3">501</div>
     </div>
 </div>
 
 
-<div class="flex flex-col md:flex-row">
-    <div class="w-2/12 ml-2 mr-1 bg-neutral-800 opacity-75">
+<div class="flex flex-col items-stretch md:flex-row">
+    <div class="w-2/12 ml-2 mr-1 bg-neutral-800 opacity-75" style="height: 82vh;">
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
-        <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
+        <div class="log-score bg-orange-700 mr-2 mt-2">125</div>
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
         <div class="log-score bg-neutral-700 mr-2 mt-2">125</div>
     </div>
-    <div class="w-10/12">
-        <div class="grid grid-cols-3 gap-1 justify-center bg-neutral-900">
+    <div class="w-10/12" style="min-height: 79vh;">
+        <div class="grid grid-cols-3 gap-1 justify-center bg-neutral-900" style="min-height: 46vh;">
             <div class="number-btn">1</div>
             <div class="number-btn">2</div>
             <div class="number-btn">3</div>
@@ -49,7 +49,7 @@
             <div class="number-btn">0</div>
             <div class="number-btn">ENTER</div>
         </div>
-        <div class="grid grid-cols-4 gap-1 justify-center bg-neutral-800 opacity-70 mr-1 ml-1 mt-2">
+        <div class="grid grid-cols-4 gap-1 justify-center bg-neutral-800 opacity-70 mr-1 ml-1 mt-2" style="min-height: 22vh;">
             <div class="p-7 ml-1 mb-1 text-center text-2xl text-neutral-500">26</div>
             <div class="p-7 ml-1 mb-1 text-center text-2xl text-neutral-500">41</div>
             <div class="p-7 ml-1 mb-1 text-center text-2xl text-neutral-500">55</div>
