--- a/src/test.html
+++ b/src/test.html
@@ -13,7 +13,7 @@
     <!-- Player 1 score -->
     <div class="basis-1/3 bg-gray-300 h-full w-full">
         <div class="h-full flex flex-col items-center">
-            <div class="p-2 justify-start mb-auto w-full text-3xl bg-gray-400 border-zinc-800 border-b-2">Player 1</div>
+            <div class="p-2 justify-start mb-auto w-full text-3xl border-zinc-800 border-b-2 bg-gray-400 bg-active">Player 1</div>
             <div class="p-2 w-full text-8xl">501</div>
             <div class="p-2 justify-end mt-auto w-full text-base text-neutral-500 border-zinc-800 border-t-2">Leg: 65.6</div>
         </div>
@@ -44,10 +44,10 @@
 
     <!-- Left score log column -->
     <div class="basis-1/6 border-t-8 border-zinc-800 bg-gray-200">
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
     </div>
 
     <!-- Middle buttons section container -->
@@ -55,47 +55,47 @@
 
         <!-- Columns for the quick finish buttons -->
         <div class="flex flex-row" style="height: 7vh;">
-            <div class="basis-1/3 pl-2 pt-2 pb-2"><div class="flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">1 Dart</div></div>
-            <div class="basis-1/3 pl-2 pt-2 pb-2"><div class="flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">2 Dart</div></div>
-            <div class="basis-1/3 pl-2 pt-2 pb-2 pr-2"><div class="flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">3 Dart</div></div>
+            <div class="basis-1/3 pl-2 pt-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">1 Dart</div></div>
+            <div class="basis-1/3 pl-2 pt-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">2 Dart</div></div>
+            <div class="basis-1/3 pl-2 pt-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl">3 Dart</div></div>
 
         </div>
 
         <!-- Calculator Buttons -->
         <div class="flex flex-row flex-wrap" style="height: 40vh;">
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn1">1</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn2">2</div></div>
-            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn3">3</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn4">4</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn5">5</div></div>
-            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn6">6</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn7">7</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn8">8</div></div>
-            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn9">9</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl" id="calcBtnEasy">EasyScore</div></div>
-            <div class="basis-1/3 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn0">0</div></div>
-            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl" id="calcBtnEnter">Enter</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn1">1</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn2">2</div></div>
+            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn3">3</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn4">4</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn5">5</div></div>
+            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn6">6</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn7">7</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn8">8</div></div>
+            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn9">9</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl" id="calcBtnEasy">EasyScore</div></div>
+            <div class="basis-1/3 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-300 border-neutral-800 text-3xl" id="calcBtn0">0</div></div>
+            <div class="basis-1/3 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-slate-700 border-neutral-800 text-3xl" id="calcBtnEnter">Enter</div></div>
 
         </div>
 
         <!-- quick score Buttons -->
         <div class="flex flex-row flex-wrap" style="height: 24vh;">
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn26">26</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn19">19</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn13">13</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn10">10</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn8">8</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn7">7</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn6">6</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn5">5</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn4">4</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn3">3</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn2">2</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn1">1</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn0">0</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn120">120</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn140">140</div></div>
-            <div class="basis-1/4 pl-2 pb-2"><div class="flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn180">180</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn26">26</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn19">19</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn13">13</div></div>
+            <div class="basis-1/4 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn10">10</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn8">8</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn7">7</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn6">6</div></div>
+            <div class="basis-1/4 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn5">5</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn4">4</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn3">3</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn2">2</div></div>
+            <div class="basis-1/4 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn1">1</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn0">0</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn120">120</div></div>
+            <div class="basis-1/4 pl-2 pb-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn140">140</div></div>
+            <div class="basis-1/4 pl-2 pb-2 pr-2"><div class="app-btn flex h-full justify-center items-center bg-gray-400 border-neutral-800 text-2xl text-neutral-500" id="quickBtn180">180</div></div>
 
         </div>
 
@@ -108,19 +108,16 @@
 
     </div>
 
-
-
-
-
     <!-- Right score log column -->
     <div class="basis-1/6 border-t-8 border-zinc-800 bg-gray-200">
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
-        <div class="mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
+        <div class="app-btn mt-1 bg-gray-400 pt-4 pb-4 text-3xl text-gray-500">60</div>
     </div>
 
 </div>
 
+<script src="main.js"></script>
 </body>
 </html>
